--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.4",
     "@shadcn/ui": "^0.0.4",
     "react": "^18.3.1",
+    "react-country-state-city": "^1.1.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
