--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@heroicons/react": "^2.1.4",
     "@shadcn/ui": "^0.0.4",
     "classnames": "^2.5.1",
+    "country-state-city": "^3.2.1",
     "react": "^18.3.1",
     "react-country-state-city": "^1.1.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "state-cities": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
